# BrainCogsEphysSorters

./: .gitignore  .gitmodules  README.md  config.py  job.slurm  main_script.py  prepare_ephys_data_ibl_script.sh  preprocess_utils.py  pyproject.toml  requirements.txt  run_job.py  setup.py
processing/: slurm_test.slurm
run_kilosort/: ks_slurm.cmd
run_kilosort/spikesorters/: run_ks2.m
sandbox/: test_script.m
u19_sorting/: config.py  postprocess_wrappers.py  preprocess_wrappers.py  run_job.py  run_ks2.m  sorter_wrappers.py  utils.py
u19_sorting/matlab_scripts/: kilosortbatch.m  run_ks.m  run_ks2.m
user_config_files/: config_manuel.m
